--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
-{% block title %} Rol aanmaken | Beheer | PlanR{% endblock %}
+{% block title %}
+    Rol aanmaken | Beheer | PlanR
+{% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer">
@@ -57,13 +59,11 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button
-                                type="reset"
-                                class="btn btn-tertiary"
-                                data-controller="utils"
-                                data-action="utils#goToUrl"
-                                data-utils-url-param="{% url 'context_lijst' %}"
-                            >
+                            <button type="reset"
+                                    class="btn btn-tertiary"
+                                    data-controller="utils"
+                                    data-action="utils#goToUrl"
+                                    data-utils-url-param="{% url 'context_lijst' %}">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
