--- a/app/apps/main/templates/404.html
+++ b/app/apps/main/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Fout 404 - Pagina niet gevonden | PlanR{% endblock %}
+{% block title %}
+    Fout 404 - Pagina niet gevonden | PlanR
+{% endblock title %}
 {% block javascripts %}
 {% endblock javascripts %}
 {% block body %}
