--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -34,10 +34,10 @@
                 {% csrf_token %}
                 <div class="form-control__with-helptext">
                     <div class="form-row">
-                        <label class="">Selecteer een taak</label>
+                        <label>Selecteer een taak</label>
                         <div>
                             {{ form.taaktype }}
-                            <p class="help-block invalid-text" style="margin:0;"></p>
+                            <p class="help-block invalid-text no-margin"></p>
                         </div>
                     </div>
                 </div>
