--- a/app/apps/main/templates/melding/part_taak_verwijderen.html
+++ b/app/apps/main/templates/melding/part_taak_verwijderen.html
@@ -24,9 +24,7 @@
                 {{ form.taaktype|render_rotterdam_formulier }}
                 <div class="form-control__with-helptext">{{ form.bericht|render_rotterdam_formulier }}</div>
                 <div class="form-row btn-row">
-                    <button type="reset"
-                            class="btn btn-tertiary"
-                            data-action="detail#closeModal">
+                    <button type="reset" class="btn btn-tertiary" data-action="detail#closeModal">
                         <span>Annuleren</span>
                     </button>
                     <button type="submit" class="btn btn-action">
