--- a/app/apps/main/templates/melding/verzonden.html
+++ b/app/apps/main/templates/melding/verzonden.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
-{% block title %}Bedankt | PlanR{% endblock %}
+{% block title %}
+    Bedankt | PlanR
+{% endblock title %}
 {% block body %}
     <h1>Bedankt</h1>
     <p>Het serviceverzoek is ingediend</p>
