--- a/app/apps/main/templates/msb/login.html
+++ b/app/apps/main/templates/msb/login.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
-{% block title %}Login | PlanR{% endblock %}
+{% block title %}
+    Login | PlanR
+{% endblock title %}
 {% block body %}
     <h1>MSB Login</h1>
     {% comment %} <turbo-frame id="melding_a/anmaken"> {% endcomment %}
