--- a/app/apps/main/templates/pdf/base.html
+++ b/app/apps/main/templates/pdf/base.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description"
+              content="Applicatie voor midoffice medewerkers om regie uit te voeren op de MOR-keten">
+        <meta name="keywords"
+              content="MOR, Meldingen openbare ruimte, gemeente Rotterdam, PlanR, midoffice, regie, meldingen">
         <title>
             {% block title %}
                 PlanR
