--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_bulk_import.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
-{% block title %}Gebruiker bulk import | Beheer | PlanR{% endblock %}
+{% block title %}
+    Gebruiker bulk import | Beheer | PlanR
+{% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <div class="page__beheer" data-controller="row-search">
@@ -21,148 +23,171 @@
         </div>
         <div class="container__flex">
             <h1>Bulk import gebruikers</h1>
-
         </div>
         {% if form %}
-        <form method="post" action="{% url 'gebruiker_bulk_import' %}" enctype="multipart/form-data" novalidate>
-            {% csrf_token %}
-            <fieldset>
-                {% if not form.errors and form.cleaned_data.csv_file.all_rows %}
-                <div>
-                    <h2 class="h3">Validatie resultaat</h2>
-                </div>
-                {% if not form.errors and form.cleaned_data.csv_file.valid_rows %}
-                <p>{{ form.cleaned_data.csv_file.valid_rows|length }} van de {{ form.cleaned_data.csv_file.all_rows|length }} gebruiker{% if form.cleaned_data.csv_file.all_rows|length > 1 %}s{% endif %}, {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}kunnen{% else  %}kan{% endif %} worden aangemaakt.</p>
-
-                <p>Onderstaande gebruikers kunnen worden geïmporteerd:</p>
-                <table>
-                    <thead>
-                        <th>email</th>
-                        <th>voornaam</th>
-                        <th>achternaam</th>
-                        <th>telefoonnummer</th>
-                        <th>Wordt geïmporteerd</th>
-                    </thead>
-                    <tbody>
-                        {% for row in form.cleaned_data.csv_file.valid_rows %}
-                        <tr>
-                            {% for cell in row %}
-                            <td>
-                                {% if forloop.last %}
-                                    {% if cell %}
-                                        {% include "icons/close.svg" %}
-                                        {{ cell }}
-                                    {% else %}
-                                        {% include "icons/checkmark.svg" %}
-                                    {% endif %}
+            <form method="post"
+                  action="{% url 'gebruiker_bulk_import' %}"
+                  enctype="multipart/form-data"
+                  novalidate>
+                {% csrf_token %}
+                <fieldset>
+                    {% if not form.errors and form.cleaned_data.csv_file.all_rows %}
+                        <div>
+                            <h2 class="h3">Validatie resultaat</h2>
+                        </div>
+                        {% if not form.errors and form.cleaned_data.csv_file.valid_rows %}
+                            <p>
+                                {{ form.cleaned_data.csv_file.valid_rows|length }} van de {{ form.cleaned_data.csv_file.all_rows|length }} gebruiker
+                                {% if form.cleaned_data.csv_file.all_rows|length > 1 %}s{% endif %}
+                                ,
+                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}
+                                    kunnen
                                 {% else %}
-                                    {% if cell %}
-                                        {{cell}}
-                                    {% else %}
-                                        -
-                                    {% endif %}
+                                    kan
                                 {% endif %}
-                            </td>
-                            {% endfor %}
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                                worden aangemaakt.
+                            </p>
+                            <p>Onderstaande gebruikers kunnen worden geïmporteerd:</p>
+                            <table>
+                                <thead>
+                                    <th>email</th>
+                                    <th>voornaam</th>
+                                    <th>achternaam</th>
+                                    <th>telefoonnummer</th>
+                                    <th>Wordt geïmporteerd</th>
+                                </thead>
+                                <tbody>
+                                    {% for row in form.cleaned_data.csv_file.valid_rows %}
+                                        <tr>
+                                            {% for cell in row %}
+                                                <td>
+                                                    {% if forloop.last %}
+                                                        {% if cell %}
+                                                            {% include "icons/close.svg" %}
+                                                            {{ cell }}
+                                                        {% else %}
+                                                            {% include "icons/checkmark.svg" %}
+                                                        {% endif %}
+                                                    {% else %}
+                                                        {% if cell %}
+                                                            {{ cell }}
+                                                        {% else %}
+                                                            -
+                                                        {% endif %}
+                                                    {% endif %}
+                                                </td>
+                                            {% endfor %}
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                            <div class="form-row container__button">
+                                <div class="form-row btn-row">
+                                    <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
+                                        <span class="nowrap">
+                                            {% if form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
+                                                Alleen deze gebruiker
+                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %}
+                                                aanmaken
+                                            {% else %}
+                                                Gebruiker
+                                                {% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %}
+                                                aanmaken
+                                            {% endif %}
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        {% elif not form.errors %}
+                            <p>Er kunnen geen gebruikers worden aangemaakt met deze csv data</p>
+                        {% endif %}
+                        {% if not form.errors and form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
+                            <p>
+                                Onderstaande gebruikers kunnen <strong>niet</strong> worden geïmporteerd:
+                            </p>
+                            <table>
+                                <thead>
+                                    <th>email</th>
+                                    <th>voornaam</th>
+                                    <th>achternaam</th>
+                                    <th>telefoonnummer</th>
+                                    <th>Wordt geïmporteerd</th>
+                                </thead>
+                                <tbody>
+                                    {% for row in form.cleaned_data.csv_file.all_rows %}
+                                        {% if row.4 %}
+                                            <tr>
+                                                {% for cell in row %}
+                                                    <td>
+                                                        {% if forloop.last %}
+                                                            {% if cell %}
+                                                                {% include "icons/close.svg" %}
+                                                                {{ cell }}
+                                                            {% else %}
+                                                                {% include "icons/checkmark.svg" %}
+                                                            {% endif %}
+                                                        {% else %}
+                                                            {% if cell %}
+                                                                {{ cell }}
+                                                            {% else %}
+                                                                -
+                                                            {% endif %}
+                                                        {% endif %}
+                                                    </td>
+                                                {% endfor %}
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        {% endif %}
+                    {% endif %}
+                    <div class="form-control__with-helptext" data-controller="bijlagen">
+                        {{ form.csv_file|render_rotterdam_formulier }}
+                    </div>
+                    <div class="form-control__with-helptext">{{ form.context|render_rotterdam_formulier }}</div>
+                    <div class="form-control__with-helptext">{{ form.group|render_rotterdam_formulier }}</div>
+                </fieldset>
                 <div class="form-row container__button">
                     <div class="form-row btn-row">
-                        <button type="submit" name="aanmaken" value="ja" class="btn btn-action">
-                            <span style="white-space: nowrap;">
-                                {% if form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
-                                    Alleen deze gebruiker{% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %} aanmaken
-                                {% else %}
-                                    Gebruiker{% if form.cleaned_data.csv_file.valid_rows|length > 1 %}s{% endif %} aanmaken
-                                {% endif %}
-                            </span>
+                        <button type="reset"
+                                class="btn btn-tertiary"
+                                data-controller="utils"
+                                data-action="utils#goToUrl"
+                                data-utils-url-param="{% url 'gebruiker_lijst' %}">
+                            <span>Annuleren</span>
+                        </button>
+                        <button type="submit"class="btn btn-action">
+                            <span>Valideren</span>
                         </button>
                     </div>
                 </div>
-                {% elif not form.errors %}
-                <p>Er kunnen geen gebruikers worden aangemaakt met deze csv data</p>
-                {% endif %}
-                {% if not form.errors and form.cleaned_data.csv_file.valid_rows|length != form.cleaned_data.csv_file.all_rows|length %}
-                <p>Onderstaande gebruikers kunnen <strong>niet</strong> worden geïmporteerd:</p>
-                <table>
-                    <thead>
-                        <th>email</th>
-                        <th>voornaam</th>
-                        <th>achternaam</th>
-                        <th>telefoonnummer</th>
-                        <th>Wordt geïmporteerd</th>
-                    </thead>
-                    <tbody>
-                        {% for row in form.cleaned_data.csv_file.all_rows %}
-                        {% if row.4 %}
-                        <tr>
-                            {% for cell in row %}
-                            <td>
-                                {% if forloop.last %}
-                                    {% if cell %}
-                                        {% include "icons/close.svg" %}
-                                        {{ cell }}
-                                    {% else %}
-                                        {% include "icons/checkmark.svg" %}
-                                    {% endif %}
-                                {% else %}
-                                    {% if cell %}
-                                        {{cell}}
-                                    {% else %}
-                                        -
-                                    {% endif %}
-                                {% endif %}
-                            </td>
-                            {% endfor %}
-                        </tr>
-                        {% endif %}
-                        {% endfor %}
-                    </tbody>
-                </table>
-                {% endif %}
-                {% endif %}
-
-                <div class="form-control__with-helptext" data-controller="bijlagen">
-                    {{ form.csv_file|render_rotterdam_formulier }}
-                </div>
-                <div class="form-control__with-helptext">
-                    {{ form.context|render_rotterdam_formulier }}
-                </div>
-                <div class="form-control__with-helptext">
-                    {{ form.group|render_rotterdam_formulier }}
-                </div>
-            </fieldset>
-            <div class="form-row container__button">
-                <div class="form-row btn-row">
-                    <button type="reset"
-                            class="btn btn-tertiary"
-                            data-controller="utils"
-                            data-action="utils#goToUrl"
-                            data-utils-url-param="{% url 'gebruiker_lijst' %}">
-                        <span>Annuleren</span>
-                    </button>
-                    <button type="submit"class="btn btn-action">
-                        <span>Valideren</span>
-                    </button>
-                </div>
-            </div>
-        </form>
+            </form>
         {% else %}
             <div>
                 <h2>Gelukt!</h2>
-                <p>Onderstaande gebruiker{% if aangemaakte_gebruikers|length > 1 %}s{% endif %} {% if aangemaakte_gebruikers|length > 1 %}zijn{% else %}is{% endif %} aangemaakt</p>
+                <p>
+                    Onderstaande gebruiker
+                    {% if aangemaakte_gebruikers|length > 1 %}s{% endif %}
+                    {% if aangemaakte_gebruikers|length > 1 %}
+                        zijn
+                    {% else %}
+                        is
+                    {% endif %}
+                    aangemaakt
+                </p>
             </div>
             <ul>
                 {% for gebruiker in aangemaakte_gebruikers %}
-                    <li><a href="{% url 'gebruiker_aanpassen' gebruiker.id %}">{{ gebruiker }}</a></li>
+                    <li>
+                        <a href="{% url 'gebruiker_aanpassen' gebruiker.id %}">{{ gebruiker }}</a>
+                    </li>
                 {% endfor %}
             </ul>
-            <a href="{% url 'gebruiker_bulk_import' %}">Nog meer gebruikers aanmaken</a><br>
+            <a href="{% url 'gebruiker_bulk_import' %}">Nog meer gebruikers aanmaken</a>
+            <br>
             <a href="{% url 'beheer' %}">Beheer</a>
-        {% endif%}
-
+        {% endif %}
     </div>
     </turbo-frame>
 {% endblock body %}
