--- a/app/apps/authorisatie/templates/auth/group_form.html
+++ b/app/apps/authorisatie/templates/auth/group_form.html
@@ -2,10 +2,12 @@
 {% load rotterdam_formulier_html %}
 {% block title %}
     {% if object %}
-    Rechtengroep '{{ object.name }}' aanpassen
+        Rechtengroep '{{ object.name }}' aanpassen
     {% else %}
-    Rechtengroep aanmaken
-    {% endif %} | Beheer | PlanR{% endblock %}
+        Rechtengroep aanmaken
+    {% endif %}
+    | Beheer | PlanR
+{% endblock title %}
 {% block body %}
     <turbo-frame id="beheer">
     <div class="page__beheer" data-turbo-action="advance">
@@ -57,13 +59,11 @@
                     </fieldset>
                     <div class="form-row container__button">
                         <div class="form-row btn-row">
-                            <button
-                                type="reset"
-                                class="btn btn-tertiary"
-                                data-controller="utils"
-                                data-action="utils#goToUrl"
-                                data-utils-url-param="{% url 'rechtengroep_lijst' %}"
-                            >
+                            <button type="reset"
+                                    class="btn btn-tertiary"
+                                    data-controller="utils"
+                                    data-action="utils#goToUrl"
+                                    data-utils-url-param="{% url 'rechtengroep_lijst' %}">
                                 <span>Annuleren</span>
                             </button>
                             <button type="submit" class="btn btn-action">
