--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from json_tags %}
-{% block title %}Beheer | PlanR{% endblock %}
+{% block title %}
+    Beheer | PlanR
+{% endblock title %}
 {% block body %}
     <turbo-frame id="beheer" data-turbo-action="advance">
     <h1>Beheer</h1>
