--- a/app/apps/context/templates/benc/melding_detail_locaties.html
+++ b/app/apps/context/templates/benc/melding_detail_locaties.html
@@ -22,9 +22,7 @@
                         <div class="display--flex--md">
                             <ul class="list-clean">
                                 <li>
-                                    <h3 class="h5">
-                                        Begraafplaats
-                                    </h3>
+                                    <h3 class="h5">Begraafplaats</h3>
                                     <p>
                                         {% if melding.locaties_voor_melding.0.begraafplaats %}
                                             {% vind_in_dict melding.signalen_voor_melding.0.meta_uitgebreid.begraafplaats.choices melding.locaties_voor_melding.0.begraafplaats as signaal_begraafplaats_naam %}
