--- a/app/apps/main/templates/500.html
+++ b/app/apps/main/templates/500.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Fout 500 - Er ging iets mis | PlanR{% endblock %}
+{% block title %}
+    Fout 500 - Er ging iets mis | PlanR
+{% endblock title %}
 {% block javascripts %}
 {% endblock javascripts %}
 {% block body %}
