--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -7,6 +7,10 @@
         <meta name="git_sha" value="{{ GIT_SHA }}">
         <meta name="viewport"
               content="user-scalable=no, width=device-width, initial-scale=1.0">
+        <meta name="description"
+              content="Applicatie voor midoffice medewerkers om regie uit te voeren op de MOR-keten">
+        <meta name="keywords"
+              content="MOR, Meldingen openbare ruimte, gemeente Rotterdam, PlanR, midoffice, regie, meldingen">
         <title>
             {% block title %}
                 PlanR
@@ -84,11 +88,11 @@
         <div class="spinner"></div>
         {% include "auth/session_timer.html" %}
         {% if APP_ENV != "productie" %}
-        <div class="container--env">
-            <div class="container">
-                <span class="badge badge--red">{{ APP_ENV }}</span>
+            <div class="container--env">
+                <div class="container">
+                    <span class="badge badge--red">{{ APP_ENV }}</span>
+                </div>
             </div>
-        </div>
         {% endif %}
     </body>
 </html>
