--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -7,7 +7,9 @@
 {% load mor_core_url from main_tags %}
 {% load rotterdam_formulier_html %}
 {% load json_encode from main_tags %}
-{% block title %}Meldingen overzicht | PlanR{% endblock %}
+{% block title %}
+    Meldingen overzicht | PlanR
+{% endblock title %}
 {% block body %}
     <turbo-frame id="overview">
     <div data-controller="overview">
@@ -35,13 +37,16 @@
                     {{ form.foldout_states }}
                     {{ form.limit|render_rotterdam_formulier }}
                     {% for veld in form.filters %}
-                        {% with foldout_name='foldout_filter-'|add:veld.name %}
-                        <div class="container__multiselect{% if foldout_name in form.foldout_states.value|json_encode %} show{% endif %}">
-                            <label class="visually-hidden">{{ veld.label }}</label>
-                            <button data-action="filter#toggleFilterElements" data-filter-target="filterButton" data-foldout-name="{{ foldout_name }}" class="toggle js-toggle{% if veld.data|length > 0 %} active {% endif %}"
-                                    type="button">{{ veld.label|capfirst }}</button>
-                            <div class="wrapper">{{ veld }}</div>
-                        </div>
+                        {% with foldout_name="foldout_filter-"|add:veld.name %}
+                            <div class="container__multiselect{% if foldout_name in form.foldout_states.value|json_encode %} show{% endif %}">
+                                <label class="visually-hidden">{{ veld.label }}</label>
+                                <button data-action="filter#toggleFilterElements"
+                                        data-filter-target="filterButton"
+                                        data-foldout-name="{{ foldout_name }}"
+                                        class="toggle js-toggle{% if veld.data|length > 0 %} active {% endif %}"
+                                        type="button">{{ veld.label|capfirst }}</button>
+                                <div class="wrapper">{{ veld }}</div>
+                            </div>
                         {% endwith %}
                     {% endfor %}
                 </div>
