--- a/app/apps/main/templates/melding/melding_spoed_veranderen.html
+++ b/app/apps/main/templates/melding/melding_spoed_veranderen.html
@@ -11,27 +11,24 @@
                     aria-label="Sluit"
                     data-action="detail#closeModal"></button>
             <h1>
-                <span>Melding {% if melding.urgentie >= .5 %}niet {% endif %}met spoed oppakken</span>
+                <span>Melding
+                    {% if melding.urgentie >= .5 %}niet{% endif %}
+                met spoed oppakken</span>
             </h1>
         </div>
         <div class="modal-body">
             <section class="section--seperated" data-testid="detailReporter">
                 <div class="container__details">
-
-
                     <form action="{% url 'melding_spoed_veranderen' melding.uuid %}"
-                            method="post"
-                            class="form--horizontal"
-                            data-turbo-frame="_top"
-                            id="spoedVeranderenForm"
-                            novalidate>
+                          method="post"
+                          class="form--horizontal"
+                          data-turbo-frame="_top"
+                          id="spoedVeranderenForm"
+                          novalidate>
                         {% csrf_token %}
                         {{ form.urgentie }}
                         <div class="form-control__with-helptext js-validation">{{ form.omschrijving_intern|render_rotterdam_formulier }}</div>
-                        <div class="form-row btn-row">
-
-                        </div>
-
+                        <div class="form-row btn-row"></div>
                         <div class="form-row btn-row">
                             <button type="reset"
                                     class="btn btn-tertiary"
@@ -45,7 +42,6 @@
                             </button>
                         </div>
                     </form>
-
                 </div>
             </section>
         </div>
