--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -22,6 +22,7 @@
             <turbo-frame id="overview">
             <div data-controller="detail"
                  data-detail-locatie-value="{{ locatie|json_encode }}"
+                 data-detail-afbeeldingen-value="{{ bijlagen|json_encode }}"
                  data-detail-signalen-value="{{ melding.signalen_voor_melding|json_encode }}">
                 <div class="border-green print-only"></div>
                 <div class="page__detail">
@@ -102,7 +103,9 @@
                                                         <li class="container__image" tabindex="0">
                                                             <div class="image"
                                                                  style="background-image: url('{{ bijlage.afbeelding_relative_url|mor_core_url }}')"
-                                                                 data-detail-target="selectedImage">
+                                                                 data-detail-target="selectedImage"
+                                                                 data-action="click->detail#showImageInModal"
+                                                                 data-detail-image-index-param="{{ forloop.counter|add:'-1' }}">
                                                                 <span>{{ bijlage.label }}</span>
                                                             </div>
                                                         </li>
@@ -116,7 +119,7 @@
                                                         {% for bijlage in bijlagen %}
                                                             <li>
                                                                 <button data-action="click->detail#selectImage"
-                                                                        data-detail-image-index-param="{{ forloop.counter }}"
+                                                                        data-detail-image-index-param="{{ forloop.counter|add:'-1' }}"
                                                                         aria-label="Bekijk afbeelding">
                                                                     <div class="container__image">
                                                                         <div class="image"
@@ -380,6 +383,38 @@
                          data-action="click->detail#closeModal"></div>
                     <turbo-frame id="melding_actie_form" class="turboframe-container" data-detail-target="turboActionModal">
                     </turbo-frame>
+                </div>
+                <div class="modal modal--images"
+                     data-detail-target="modalImages"
+                     id="imageModal">
+                    <div class="modal-backdrop modal-exit"
+                         id="modal-backdrop"
+                         data-action="click->detail#closeModal"></div>
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button"
+                                        class="btn-close"
+                                        aria-label="Sluit"
+                                        data-action="detail#closeModal"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="image" data-detail-target="selectedImageModal"></div>
+                                <div class="container__navigate-images">
+                                    <div class="navigate-images--left inactive"
+                                         data-detail-target="navigateImagesLeft"
+                                         data-action="click->detail#showPreviousImageInModal">
+                                        <span aria-label="Bekijk vorige afbeelding">{% include "icons/arrow-right.svg" %}</span>
+                                    </div>
+                                    <div class="navigate-images--right inactive"
+                                         data-detail-target="navigateImagesRight"
+                                         data-action="click->detail#showNextImageInModal">
+                                        <span aria-label="Bekijk volgende afbeelding">{% include "icons/arrow-right.svg" %}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             </turbo-frame>
