--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -4,6 +4,7 @@
     scroll-behavior: smooth;
     width: 100%;
     -webkit-overflow-scrolling: touch;
+    cursor: pointer;
 
     .imageslider {
         display: flex;
