--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -127,4 +127,98 @@ body.show-modal--first-filter {
         opacity: 0;
         display: none;
     }
+
+    &--images {
+        .modal-dialog {
+            max-width: none;
+            width: 98%;
+            height: 98%;
+            margin: 0.5% auto;
+
+            .modal-header {
+                padding: 0;
+                z-index: 10;
+            }
+
+            .modal-body {
+                padding: 1%;
+            }
+
+            .modal-content,
+            .modal-body,
+            ul,
+            li,
+            .image {
+                height: 100%;
+            }
+
+            .image {
+                width: 100%;
+                height: 100%;
+                max-width: 100%;
+                max-height: 100%;
+                background-size: contain;
+                background-position: 50% 50%;
+                background-repeat: no-repeat;
+                background-color: $gray-tint02;
+            }
+        }
+
+        .container__navigate-images {
+            // position: relative;
+
+            .navigate-images--left,
+            .navigate-images--right {
+                cursor: pointer;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                width: 25%;
+
+                opacity: 1;
+                transition: opacity 0.25s ease-in;
+
+                span {
+                    display: block;
+                    width: 80px;
+                    height: 80px;
+                    position: absolute;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    background-color: $black;
+
+                    svg {
+                        width: 64px;
+                        height: 64px;
+                        margin: 8px;
+                        path {
+                            fill: $white;
+                        }
+                    }
+                }
+
+                &.inactive {
+                    opacity: 0;
+                    pointer-events: none;
+                }
+            }
+            .navigate-images--left {
+                left: 0;
+                span {
+                    left: 0;
+
+                    svg {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+
+            .navigate-images--right {
+                right: 0;
+                span {
+                    right: 0;
+                }
+            }
+        }
+    }
 }
