Styling, update imageslider in page itself

--- a/app/apps/main/templates/melding/melding_detail.html
+++ b/app/apps/main/templates/melding/melding_detail.html
@@ -136,6 +136,7 @@
                                             <div class="background-image"></div>
                                         {% endif %}
                                     </div>
+                                    {% include "icons/expand.svg" %}
                                 </section>
                                 {% if bijlagen|length > 0 %}
                                     <section class="section--seperated section--imagelist print-only">
